translate ch9.md